Closed Bug 1876180 Opened 1 year ago Closed 1 year ago

NSInvalidArgumentException: -[ChildView moxUnignoredParent]: unrecognized selector

Categories

(Core :: Disability Access APIs, defect)

Unspecified
macOS
defect

Tracking

()

RESOLVED FIXED
124 Branch
Tracking Status
firefox124 --- fixed

People

(Reporter: bradwerth, Assigned: bradwerth)

References

Details

Attachments

(1 file)

I get this exception thrown repeatedly when running the browser_opentabs_recency.js test. Here's a sample stack:

0:47.26 GECKO(80400) 2024-01-23 15:08:36.388 firefox[80400:10362115] Mozilla has caught an Obj-C exception [NSInvalidArgumentException: -[ChildView moxUnignoredParent]: unrecognized selector sent to instance 0x1277f3700]
 0:47.43 GECKO(80400) 2024-01-23 15:08:36.566 firefox[80400:10362115] Stack trace:
 0:47.43 GECKO(80400) (
 0:47.43 GECKO(80400) 	0   CoreFoundation                      0x000000018a0d0570 __exceptionPreprocess + 176
 0:47.43 GECKO(80400) 	1   libobjc.A.dylib                     0x0000000189bc1eb4 objc_exception_throw + 60
 0:47.43 GECKO(80400) 	2   CoreFoundation                      0x000000018a18212c -[NSObject(NSObject) __retain_OA] + 0
 0:47.43 GECKO(80400) 	3   CoreFoundation                      0x000000018a03a7d4 ___forwarding___ + 1572
 0:47.43 GECKO(80400) 	4   CoreFoundation                      0x000000018a03a0f0 _CF_forwarding_prep_0 + 96
 0:47.43 GECKO(80400) 	5   XUL                                 0x000000028c405720 -[MOXAccessibleBase moxUnignoredParent] + 88
 0:47.43 GECKO(80400) 	6   XUL                                 0x000000028c405a38 -[MOXAccessibleBase moxFindAncestor:] + 180
 0:47.43 GECKO(80400) 	7   XUL                                 0x000000028c416c20 -[mozAccessible maybePostLiveRegionChanged] + 52
 0:47.43 GECKO(80400) 	8   XUL                                 0x000000028c41750c -[mozAccessible handleAccessibleEvent:] + 632

It looks like the implementation of moxFindAncestor checks for compliance with the MOXAccessible protocol, but then calls the optional method moxUnignoredParent without checking that it is implemented. I can build a patch to fix this.

Pushed by bwerth@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a049115f0608 Make MOXAccessibleBase moxFindAncestor check for selector moxUnignoredParent before calling it. r=eeejay
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 124 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: